add menu and menuItem routes
